client is able to be back up